shrink tagline size to avoid shifting on mobile

--- a/style/main.css
+++ b/style/main.css
@@ -561,7 +561,7 @@ hr {
     margin-top: 15px; }
  
   .tagline {
-    font-size: 22px;
+    font-size: 16px;
     font-style: bold;}
 
   .container {
